rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__weldconstraint__encoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: text_roundtrip
---
num_types: 3
num_instances: 4
chunks:
  - Inst:
      type_id: 2
      type_name: Folder
      object_format: 0
      referents:
        - 3
  - Inst:
      type_id: 1
      type_name: Part
      object_format: 0
      referents:
        - 1
        - 2
  - Inst:
      type_id: 0
      type_name: WeldConstraint
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 2
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 2
      prop_name: Name
      prop_type: String
      values:
        - Folder
  - Prop:
      type_id: 2
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
  - Prop:
      type_id: 2
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: Anchored
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 1
      prop_name: BackParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
  - Prop:
      type_id: 1
      prop_name: BackParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
  - Prop:
      type_id: 1
      prop_name: BackSurface
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: BackSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: BottomParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
  - Prop:
      type_id: 1
      prop_name: BottomParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
  - Prop:
      type_id: 1
      prop_name: BottomSurface
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: BottomSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: CFrame
      prop_type: CFrame
      values:
        - position:
            - -6
            - 0.5000011
            - -11
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
        - position:
            - -2
            - 1.5000011
            - -15
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
  - Prop:
      type_id: 1
      prop_name: CanCollide
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: CanQuery
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: CanTouch
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: CastShadow
      prop_type: Bool
      values:
        - true
        - true
  - Prop:
      type_id: 1
      prop_name: CollisionGroupId
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Color3uint8
      prop_type: Color3uint8
      values:
        - - 163
          - 162
          - 165
        - - 163
          - 162
          - 165
  - Prop:
      type_id: 1
      prop_name: CustomPhysicalProperties
      prop_type: PhysicalProperties
      values:
        - Default
        - Default
  - Prop:
      type_id: 1
      prop_name: formFactorRaw
      prop_type: Enum
      values:
        - 1
        - 1
  - Prop:
      type_id: 1
      prop_name: FrontParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
  - Prop:
      type_id: 1
      prop_name: FrontParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
  - Prop:
      type_id: 1
      prop_name: FrontSurface
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: FrontSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: LeftParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
  - Prop:
      type_id: 1
      prop_name: LeftParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
  - Prop:
      type_id: 1
      prop_name: LeftSurface
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: LeftSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Locked
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: Massless
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 1
      prop_name: Material
      prop_type: Enum
      values:
        - 256
        - 256
  - Prop:
      type_id: 1
      prop_name: Name
      prop_type: String
      values:
        - A
        - B
  - Prop:
      type_id: 1
      prop_name: PivotOffset
      prop_type: CFrame
      values:
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
  - Prop:
      type_id: 1
      prop_name: Reflectance
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: RightParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
  - Prop:
      type_id: 1
      prop_name: RightParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
  - Prop:
      type_id: 1
      prop_name: RightSurface
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: RightSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: RootPriority
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: RotVelocity
      prop_type: Vector3
      values:
        - - 0
          - 0
          - 0
        - - 0
          - 0
          - 0
  - Prop:
      type_id: 1
      prop_name: shape
      prop_type: Enum
      values:
        - 1
        - 1
  - Prop:
      type_id: 1
      prop_name: size
      prop_type: Vector3
      values:
        - - 4
          - 1
          - 2
        - - 4
          - 1
          - 2
  - Prop:
      type_id: 1
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 1
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 1
      prop_name: TopParamA
      prop_type: Float32
      values:
        - -0.5
        - -0.5
  - Prop:
      type_id: 1
      prop_name: TopParamB
      prop_type: Float32
      values:
        - 0.5
        - 0.5
  - Prop:
      type_id: 1
      prop_name: TopSurface
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: TopSurfaceInput
      prop_type: Enum
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Transparency
      prop_type: Float32
      values:
        - 0
        - 0
  - Prop:
      type_id: 1
      prop_name: Velocity
      prop_type: Vector3
      values:
        - - 0
          - 0
          - 0
        - - 0
          - 0
          - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: CFrame0
      prop_type: CFrame
      values:
        - position:
            - 4
            - 1
            - -4
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - WeldConstraint
  - Prop:
      type_id: 0
      prop_name: Part0Internal
      prop_type: Ref
      values:
        - 1
  - Prop:
      type_id: 0
      prop_name: Part1Internal
      prop_type: Ref
      values:
        - 2
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
  - Prop:
      type_id: 0
      prop_name: State
      prop_type: Int32
      values:
        - 3
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prnt:
      version: 0
      links:
        - - 0
          - 1
        - - 1
          - 3
        - - 2
          - 3
        - - 3
          - -1
  - End
